2009-07-10  Piotr Fusik  <fox@scene.pl>
* asap.c, win32/gui.c, win32/wasap/wasap.c: source code indentation


2009-07-02  Piotr Fusik  <fox@scene.pl>
* asap.c: source code shortened using the UWORD macro

* java/ASAPApplet.java: small refactoring


2009-06-10  Piotr Fusik  <fox@scene.pl>
* asap.c, java/ASAP.ppjava: ASAP_DurationToString() returns an empty string
  and not garbage if passed 100 minutes or more


2009-06-05  Piotr Fusik  <fox@scene.pl>
* gsplayer/USAGE, README, win32/Makefile: created wince usage doc

* gsplayer/Makefile, win32/Makefile: created wince Makefile

* csharp/Makefile: converted from nmake to gmake

* win32/Makefile: use unix2dos and not perl (cygwin's perl outputs LFs)


2009-06-02  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h: added const to ASAP_GetPosition and ASAP_GetWavHeader


2009-06-01  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c, win32/gui.rc, win32/gui.h: added "Save as WAV"

* raw2c.pl: made shorter

* asap2wav.c: error message for trailing options which were silently ignored


2009-05-29  Piotr Fusik  <fox@scene.pl>
* win32/Makefile, asap.c, win32/winamp/in_asap.c, win32/winamp/ipc_pe.h,
  win32/winamp/wa_ipc.h: switched from VS2008 to MinGW


2009-05-28  Piotr Fusik  <fox@scene.pl>
* win32/gui.rc: backslashes in icon paths changed to slashes for windres

* win32/gui.c: prevent a gcc warning


2009-05-27  Piotr Fusik  <fox@scene.pl>
* asapscan.c: do not trigger silence detection at the initial silence

 
2009-05-18  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: apokeysnd.dll stripped from 50k to 11k by not using
  the C library


2009-05-14  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: shortened and fixed "clean" target; shortened "dist" target;
  backup file removal within ASCIIDOC_POSTPROCESS

* acpu.c: optimized ROR

* asap.c, asap.h, asap2wav.c, java/ASAP.ppjava, java/ASAP2WAV.java,
  java/ASAPMIDlet.java, csharp/ASAP.ppcs, csharp/asap2wav.cs:
  ASAP_GetWavHeader()
