@@ -1,3 +1,9 @@
+2009-07-15  Piotr Fusik  <fox@scene.pl>
+* win32/Makefile: converted from nmake to gmake
+
+* java/Makefile: cleanup
+
+
 2009-07-10  Piotr Fusik  <fox@scene.pl>
 * asap.c, win32/gui.c, win32/wasap/wasap.c: source code indentation
 
